--- a/leaderboard/index.css
+++ b/leaderboard/index.css
@@ -1,7 +1,18 @@
 * {
     font-family: "Open Sans", sans-serif;
+    margin: 0;
+    padding: 0;
+    
     
    
+}
+
+.table-container{
+    /* limit the height of the table */
+    max-height: 30em;
+    overflow-y: scroll;
+    overflow-x: scroll;
+
 }
 
 /* TABLE STYLES */
@@ -11,15 +22,23 @@
     margin-right: auto;
     color: grey;
     font-size: 1em;
+    /* overflow-y: scroll;
+    overflow-x: scroll; */
+    margin-top: 6em;
+    margin-bottom: 6em;
+    min-width: max-content;
     
     
     min-width: 600px;
     border-radius: 5px 5px 5px 5px;
-    overflow: hidden;
+    /* overflow: hidden; */
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
 }
 
 .board-table thead tr {
+    position: sticky;
+    top: 0em;
+    
     background-color: #04b49c;
     color: #ffffff;
     text-align: center;
@@ -67,6 +86,11 @@
     margin-top: .4em;
     margin-left: 0em;
 }
+
+.table-container tbody tr {
+height: 3.5em;
+
+}
 .board-table tbody tr:first-of-type .rank-container .medal img{
     content: url("/images/medal1a.png");   
     
@@ -80,6 +104,20 @@
 .board-table tbody tr:nth-child(3) .rank-container .medal img {
     content: url("/images/medal3a.png");
    
+}
+
+.rank-number p:first-of-type{
+    
+    margin-top: .7em;
+}
+.rank-number p:nth-child(2){
+    margin-top: .7em;
+}
+.rank-number p:nth-child(3){
+    margin-top: .7em;
+}
+.rank-number p:nth-child(n+4){
+    margin-top: 0em;
 }
 
 /* for every other rank element after the first 3 */
@@ -103,6 +141,7 @@
 }
 
 
+
 /* USERNAME STYLES */
 .username-container{
     display: flex;
@@ -120,3 +159,36 @@
     padding-left: 1em;
 }
 
+@media (max-width: 750px){
+
+.board-table{
+    font-size: .8em;
+
+}
+
+    /* .board-table thead{
+        display: none;
+    }
+
+    .board-table, .board-table tbody, .board-table tr, .board-table td{
+        display: block;
+        width: 100%;
+    }
+
+    .board-table tr{
+        margin-bottom: 1.2em;
+    }
+
+    .board-table tbody tr td {
+        text-align: right;  
+        padding-left: 50%;
+        position: relative;
+    }
+    .board-table tbody tr td::before{
+        content: attr(data-label);
+        position: absolute;
+        left: 0;
+    } */
+
+
+}
